--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,8 @@
               "node_modules/aos/dist/aos.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
+              "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",  
+              "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css"
             
             ],
             "stylePreprocessorOptions": {
@@ -45,7 +47,8 @@
                 "src/fonts"
               ]
             },
-            "scripts": []
+            "scripts": ["./node_modules/jquery/dist/jquery.min.js",  
+              "./node_modules/owl.carousel/dist/owl.carousel.min.js"]
           },
           "configurations": {
             "staging": {
