--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.9",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
@@ -24,7 +26,10 @@
     "angulartics2": "^10.0.0",
     "aos": "^2.3.4",
     "component": "^1.1.0",
+    "jquery": "^3.6.0",
+    "ngx-owl-carousel": "^2.0.7",
     "ngx-owl-carousel-o": "^6.0.0",
+    "owl.carousel": "^2.3.4",
     "particles.js": "^2.0.0",
     "rxjs": "~6.5.4",
     "three": "^0.117.1",
